Fix channelemoji emojis being squished

--- a/src/tobleroneplugins/ChannelEmojis/style.css
+++ b/src/tobleroneplugins/ChannelEmojis/style.css
@@ -11,6 +11,7 @@
     border-radius: 50vh;
     height: 27px;
     width: 27px;
+    min-width: 27px;
     display: flex;
     align-items: center;
     justify-content: center;
